Fixed link on small screen

--- a/src/stylesheets/components/portfolio-content.scss
+++ b/src/stylesheets/components/portfolio-content.scss
@@ -49,4 +49,18 @@
     border-bottom: 1px solid #555;
     text-decoration: none;
   }
+
+  .show-on-small {
+    display: none;
+  }
+
+  @media only screen and (max-width: 463px) {
+    .show-on-small {
+      display: flex;
+    }
+
+    .hide-on-small {
+      display: none;
+    }
+  }
 }
